@startuml
class User {
  - name: String
  - recipes: [Recipe]
  - notes: [Note]
  - events: [Event]
  - courses: [Course]
  + createRecipe(title: String, ingredients: [Object]): Recipe
  + editRecipe(recipe: Recipe, title: String, ingredients: [Object]): Recipe
  + deleteRecipe(recipe: Recipe): Recipe
  + copyRecipe(recipe: Recipe): Recipe
  + createEvent(title: String, description: String, location: String, date: Date): Event
  + joinEvent(event: Event): Event
  + leaveEvent(event: Event): Event
  + cancelEvent(event: Event): Event
  + addNote(recipeNotes: String, recipe: Recipe): Note
  + editNote(recipeNotes: String, note: Note): Note
  + deleteNote(note: Note): [Note]
  + createCourse(title: String, description: String, price: Number, startDate: Date, endDate: Date): Course
  + editCourse(course: Course, title: String, description: String, price: Number, startDate: Date, endDate: Date): Course
  + joinCourse(course: Course)
  + deleteCourse(course: Course): Course
}

class Recipe {
  - title: String
  - ingredients: [{ quantity: Number, name: String }]
  - notes: [Note]
  + recipeDetails(): String
}

class Note {
  - recipeNotes: String
}

class Event {
  - title: String
  - description: String
  - location: String
  - date: Date
  - attendees: [User]
  + upcomingEvents(): [Event]
}

class Course {
  - title: String
  - description: String
  - price: Number
  - startDate: Date
  - endDate: Date
}

User "1" *-- "*" Recipe
User "1" *-- "*" Note
User "1" *-- "*" Event
User "1" *-- "*" Course
Recipe "1" *-- "*" Note
Event "0..*" *-- "*" User
@enduml
